# MLOps_HW

./: classes_part_1.py  main.py  pyproject.toml
