[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["Muhandro <muhandro@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.5.2"
pandas = "^2.2.3"
numpy = "^2.1.3"
streamlit = "^1.40.1"
category-encoders = "^2.6.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
